--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./images/navicon.jpg" type="image/jpg">
     <!-- ======Css Files=============== -->
     <link rel="stylesheet" href="mobileResponsive.css">
+    <link rel="stylesheet" href="common.css">
 
     <!-- ========Font awesome========== -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -33,7 +34,45 @@
                 
             </nav>
         </div>
+        <div class="hero">
+            <div class="hero-content">
+                <p class="hero-heading">Our Courses</p>
+                <h2>With Scholar Teacher Everything is easy</h2>
+                <p class="hero-paragraph">Scholar is a free template designed by Abhishek Kumar for online educational related websites.This layout is created using Html , CSS and Javascript.</p>
+                <a href="#" class="btn">Request Demo</a>
+            </div>
+        </div>
     </div>
+    <!-- services section start -->
+    <div class="services">
+        <div>
+            <h2>Online Degrees</h2>
+            <p>Whenever you need free templates in HTML CSS, you just remember TemplateMo website.</p>
+            <a href="#" class="Service-btn">Read more</a>
+            <div class="service-icon">
+                <img src="./images/service-01.png" alt="icon">
+            </div>
+        </div>
+
+        <div>
+            <h2>Short Courses</h2>
+            <p>You can browse free templates based on different tags such as digital marketing, etc.</p>
+            <a href="#" class="Service-btn">Read more</a>
+            <div class="service-icon">
+                <img src="./images/service-02.png" alt="icon">
+            </div>
+        </div>
+
+        <div>
+            <h2>Web Experts</h2>
+            <p>You can start learning HTML CSS by modifying free templates from our website too.</p>
+            <a href="#" class="Service-btn">Read more</a>
+            <div class="service-icon">
+                <img src="./images/service-03.png" alt="icon">
+            </div>
+        </div>
+    </div>
+    <!-- services section end -->
     <script src="script.js"></script>
 </body>
 </html>
