--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- ======Css Files=============== -->
     <link rel="stylesheet" href="mobileResponsive.css">
     <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="Course.css">
 
     <!-- ========Font awesome========== -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -73,6 +74,64 @@
         </div>
     </div>
     <!-- services section end -->
+    <!-- ================About section start======= -->
+    <div class="about">
+        <div class="blue-box">
+            <div class="accordian">
+                <div class="blue-box-header">
+                    <h3>Where shall we begin?</h3>
+                    <span class="icon">+</span>
+                </div>
+                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+            </div>
+
+            <div class="accordian">
+               <div class="blue-box-header">
+                    <h3>Where shall we begin?</h3>
+                    <span class="icon">+</span>
+                </div>
+                <p class="answer ">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+            </div>
+            <div class="accordian">
+                <div class="blue-box-header">
+                    <h3>Where shall we begin?</h3>
+                    <span class="icon">+</span>
+                    <!-- <span>-</span> -->
+                </div>
+                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+            </div>
+            <div class="accordian">
+                <div class="blue-box-header">
+                    <h3>Where shall we begin?</h3>
+                    <span class="icon">+</span>
+                </div>
+                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+            </div>
+        </div>
+        <div class="about-us">
+            <h5>ABOUT US</h5>
+            <h1>What Make Us The Best Academy Online?</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis iste et quo! Sunt minima quae dignissimos distinctio cumque temporibus consequuntur numquam, earum dolores error voluptatem velit facilis ullam animi vitae blanditiis omnis, dicta similique vero assumenda.</p>
+            <a href="#" class="about-btn">Discover More</a>
+        </div>
+    </div>
+    <!-- ================About section end======= -->
+    <!-- ====================Latest course start========= -->
+    <div class="course">
+        <h5>LATEST COURSES</h5>
+        <h1>Latest Courses</h1>
+        <div class="course-card">
+            <img src="./images/course-01.jpg" alt="">
+            <p>Stella Blair</p>
+            <h2>Learn Web Design</h2>
+            <p>WEB DESIGN</p>
+            <div class="price">
+                <h1>$450</h1>
+            </div>
+        </div>
+    </div>
+    <!-- ====================Latest course end========= -->
+
     <script src="script.js"></script>
 </body>
 </html>
