Mobile responsive completed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,36 +11,53 @@
     <link rel="stylesheet" href="mobileResponsive.css">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="Course.css">
+    <link rel="stylesheet" href="Testmonial.css">
 
     <!-- ========Font awesome========== -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
+
 <body>
     <div class="hero-container">
         <div class="header">
             <h1 id="logo">Scholar</h1>
             <nav class="nav">
                 <ul class="menu" id="menu">
-                    <a href="#"><li class="nav-items">Home</li></a>
-                    <a href="#"><li class="nav-items">Service</li></a>
-                    <a href="#"><li class="nav-items">Courses</li></a>
-                    <a href="#"><li class="nav-items">Team</li></a>
-                    <a href="#"><li class="nav-items">Events</li></a>
-                    <a href="#"><li class="nav-items">Register Now</li></a>
+                    <a href="#">
+                        <li class="nav-items">Home</li>
+                    </a>
+                    <a href="#">
+                        <li class="nav-items">Service</li>
+                    </a>
+                    <a href="#">
+                        <li class="nav-items">Courses</li>
+                    </a>
+                    <a href="#">
+                        <li class="nav-items">Team</li>
+                    </a>
+                    <a href="#">
+                        <li class="nav-items">Events</li>
+                    </a>
+                    <a href="#">
+                        <li class="nav-items">Register Now</li>
+                    </a>
                 </ul>
                 <div class="menu-icons">
                     <i class="fa-solid fa-bars" id="bars" onclick="openNav()"></i>
                     <i class="fa-solid fa-x" onclick="CloseNav()" id="x"></i>
                 </div>
-                
+
             </nav>
         </div>
         <div class="hero">
             <div class="hero-content">
                 <p class="hero-heading">Our Courses</p>
                 <h2>With Scholar Teacher Everything is easy</h2>
-                <p class="hero-paragraph">Scholar is a free template designed by Abhishek Kumar for online educational related websites.This layout is created using Html , CSS and Javascript.</p>
+                <p class="hero-paragraph">Scholar is a free template designed by Abhishek Kumar for online educational
+                    related websites.This layout is created using Html , CSS and Javascript.</p>
                 <a href="#" class="btn">Request Demo</a>
             </div>
         </div>
@@ -82,15 +100,19 @@
                     <h3>Where shall we begin?</h3>
                     <span class="icon">+</span>
                 </div>
-                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt
+                    ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Quis ipsum suspendisse ultrices gravida.</p>
             </div>
 
             <div class="accordian">
-               <div class="blue-box-header">
+                <div class="blue-box-header">
                     <h3>Where shall we begin?</h3>
                     <span class="icon">+</span>
                 </div>
-                <p class="answer ">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                <p class="answer ">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor
+                    incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
             </div>
             <div class="accordian">
                 <div class="blue-box-header">
@@ -98,20 +120,26 @@
                     <span class="icon">+</span>
                     <!-- <span>-</span> -->
                 </div>
-                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt
+                    ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Quis ipsum suspendisse ultrices gravida.</p>
             </div>
             <div class="accordian">
                 <div class="blue-box-header">
                     <h3>Where shall we begin?</h3>
                     <span class="icon">+</span>
                 </div>
-                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                <p class="answer">Dolor almesit amet, consectetur adipiscing elit, sed doesn't eiusmod tempor incididunt
+                    ut labore consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Quis ipsum suspendisse ultrices gravida.</p>
             </div>
         </div>
         <div class="about-us">
             <h5>ABOUT US</h5>
             <h1>What Make Us The Best Academy Online?</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis iste et quo! Sunt minima quae dignissimos distinctio cumque temporibus consequuntur numquam, earum dolores error voluptatem velit facilis ullam animi vitae blanditiis omnis, dicta similique vero assumenda.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis iste et quo! Sunt minima quae dignissimos
+                distinctio cumque temporibus consequuntur numquam, earum dolores error voluptatem velit facilis ullam
+                animi vitae blanditiis omnis, dicta similique vero assumenda.</p>
             <a href="#" class="about-btn">Discover More</a>
         </div>
     </div>
@@ -122,16 +150,305 @@
         <h1>Latest Courses</h1>
         <div class="course-card">
             <img src="./images/course-01.jpg" alt="">
-            <p>Stella Blair</p>
-            <h2>Learn Web Design</h2>
-            <p>WEB DESIGN</p>
+            <p class="teacher-name">Stella Blair</p>
+            <h2 class="course-name">Learn Web Design</h2>
+            <p class="course-heading">WEB DESIGN</p>
+            <div class="price">
+                <h1>$450</h1>
+            </div>
+        </div>
+        <div class="course-card">
+            <img src="./images/course-02.jpg" alt="">
+            <p class="teacher-name">Stella Blair</p>
+            <h2 class="course-name">Learn Web Design</h2>
+            <p class="course-heading">WEB DESIGN</p>
+            <div class="price">
+                <h1>$450</h1>
+            </div>
+        </div>
+        <div class="course-card">
+            <img src="./images/course-03.jpg" alt="">
+            <p class="teacher-name">Stella Blair</p>
+            <h2 class="course-name">Learn Web Design</h2>
+            <p class="course-heading">WEB DESIGN</p>
+            <div class="price">
+                <h1>$450</h1>
+            </div>
+        </div>
+        <div class="course-card">
+            <img src="./images/course-04.jpg" alt="">
+            <p class="teacher-name">Stella Blair</p>
+            <h2 class="course-name">Learn Web Design</h2>
+            <p class="course-heading">WEB DESIGN</p>
+            <div class="price">
+                <h1>$450</h1>
+            </div>
+        </div>
+        <div class="course-card">
+            <img src="./images/course-05.jpg" alt="">
+            <p class="teacher-name">Stella Blair</p>
+            <h2 class="course-name">Learn Web Design</h2>
+            <p class="course-heading">WEB DESIGN</p>
+            <div class="price">
+                <h1>$450</h1>
+            </div>
+        </div>
+        <div class="course-card">
+            <img src="./images/course-06.jpg" alt="">
+            <p class="teacher-name">Stella Blair</p>
+            <h2 class="course-name">Learn Web Design</h2>
+            <p class="course-heading">WEB DESIGN</p>
             <div class="price">
                 <h1>$450</h1>
             </div>
         </div>
     </div>
+
     <!-- ====================Latest course end========= -->
+    <!-- ====================Records section start====== -->
+    <div class="records">
+        <div>
+            <h1>150+</h1>
+            <p>Happy Student</p>
+        </div>
+        <div>
+            <h1>804+</h1>
+            <p>Course Hours</p>
+        </div>
+        <div>
+            <h1>50+</h1>
+            <p>Employed Student</p>
+        </div>
+        <div>
+            <h1>15+</h1>
+            <p>Years Experienced</p>
+        </div>
+
+    </div>
+    <!-- ==============record section ends=========== -->
+    <!-- ============== Techers section start=========== -->
+    <div class="teachers">
+        <div class="teacher-card">
+            <img src="./images/member-01.jpg" alt="">
+            <div>
+                <p>UX Teacher</p>
+                <h1>Sophia Rose</h1>
+                <div class="icons">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                </div>
+            </div>
+
+        </div>
+        <div class="teacher-card">
+            <img src="./images/member-02.jpg" alt="">
+            <div>
+                <p>UX Teacher</p>
+                <h1>Sophia Rose</h1>
+                <div class="icons">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                </div>
+            </div>
+
+        </div>
+        <div class="teacher-card">
+            <img src="./images/member-03.jpg" alt="">
+            <div>
+                <p>UX Teacher</p>
+                <h1>Sophia Rose</h1>
+                <div class="icons">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                </div>
+            </div>
+
+        </div>
+        <div class="teacher-card">
+            <img src="./images/member-04.jpg" alt="">
+            <div>
+                <p>UX Teacher</p>
+                <h1>Sophia Rose</h1>
+                <div class="icons">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- ============== Techers section end=========== -->
+    <!-- ================testimonial section start=============== -->
+    <div class="testimonial-blue">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel molestias iste odio debitis dolore? Nam fugiat
+            ab dolore ex itaque ipsa vitae totam dolores dolorem fuga, optio nobis ipsam temporibus, debitis molestias
+            repellat asperiores officiis?</p>
+        <div>
+            <img src="./images/testimonial-author.jpg" alt="testimonial-author">
+            <div class="testimonial-teacher-details">
+                <p>UI Experts</p>
+                <h3>Thomas Jefferson</h3>
+            </div>
+
+        </div>
+    </div>
+    <div class="testimonial">
+        <p class="testimonial-heading">TESTIMONIAL</p>
+        <h1>What They Say About Us?</h1>
+        <p>You can search free CSS templates on Google using different keywords such as templatemo portfolio, templatemo
+            gallery, templatemo blue color, etc.</p>
+    </div>
+    <!-- ================testomonial section end=============== -->
+    <!-- =============Schedule section start==================== -->
+    <div class="schedules">
+        <p>Schedule</p>
+        <h2>Upcoming Events</h2>
+
+        <div class="schedules-card">
+            <img src="./images/course-04.jpg" alt="course-img">
+            <!-- <span>></span> -->
+            <div>
+                <p>WEB DESIGN</p>
+                <h3>UI Best Practices</h3>
+                <hr>
+                <div class="course-detail">
+                    <div class="details">
+                        <p>Date:</p>
+                        <p class="bold">16-feb-2023</p>
+                    </div>
+                    <div class="details">
+                        <p>Duration:</p>
+                        <p class="bold">22 Hours</p>
+                    </div>
+                    <div class="details">
+                        <p>Price:</p>
+                        <p class="bold">$120</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="schedules-card">
+            <img src="./images/course-04.jpg" alt="course-img">
+            <!-- <span>></span> -->
+            <div>
+                <p>WEB DESIGN</p>
+                <h3>UI Best Practices</h3>
+                <hr>
+                <div class="course-detail">
+                    <div class="details">
+                        <p>Date:</p>
+                        <p class="bold">16-feb-2023</p>
+                    </div>
+                    <div class="details">
+                        <p>Duration:</p>
+                        <p class="bold">22 Hours</p>
+                    </div>
+                    <div class="details">
+                        <p>Price:</p>
+                        <p class="bold">$120</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="schedules-card">
+            <img src="./images/course-04.jpg" alt="course-img">
+            <!-- <span>></span> -->
+            <div>
+                <p>WEB DESIGN</p>
+                <h3>UI Best Practices</h3>
+                <hr>
+                <div class="course-detail">
+                    <div class="details">
+                        <p>Date:</p>
+                        <p class="bold">16-feb-2023</p>
+                    </div>
+                    <div class="details">
+                        <p>Duration:</p>
+                        <p class="bold">22 Hours</p>
+                    </div>
+                    <div class="details">
+                        <p>Price:</p>
+                        <p class="bold">$120</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="schedules-card">
+            <img src="./images/course-04.jpg" alt="course-img">
+            <!-- <span>></span> -->
+            <div>
+                <p>WEB DESIGN</p>
+                <h3>UI Best Practices</h3>
+                <hr>
+                <div class="course-detail">
+                    <div class="details">
+                        <p>Date:</p>
+                        <p class="bold">16-feb-2023</p>
+                    </div>
+                    <div class="details">
+                        <p>Duration:</p>
+                        <p class="bold">22 Hours</p>
+                    </div>
+                    <div class="details">
+                        <p>Price:</p>
+                        <p class="bold">$120</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="schedules-card">
+            <img src="./images/course-04.jpg" alt="course-img">
+            <!-- <span>></span> -->
+            <div>
+                <p>WEB DESIGN</p>
+                <h3>UI Best Practices</h3>
+                <hr>
+                <div class="course-detail">
+                    <div class="details">
+                        <p>Date:</p>
+                        <p class="bold">16-feb-2023</p>
+                    </div>
+                    <div class="details">
+                        <p>Duration:</p>
+                        <p class="bold">22 Hours</p>
+                    </div>
+                    <div class="details">
+                        <p>Price:</p>
+                        <p class="bold">$120</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- =============Schedule section end==================== -->
+    <!-- =============contact us================ -->
+    <div class="contact-us">
+        <div class="contact-text">
+            <p class="blue">CONTACT US</p>
+            <h1>Feel Free To Contact Us Anytime</h1>
+            <p>Thank you for choosing our templates. We provide you best CSS templates at absolutely 100% free of charge. You may support us by sharing our website to your friends.</p>
+        </div>
+        <div class="contact-form">
+            <input type="text" name="name" id="name" placeholder="Your Name">
+            <input type="email" name="email" id="email" placeholder="Your Email">
+            <textarea name="message" id="message" cols="30" rows="4" placeholder="Message"></textarea>
+            <button type="submit">Send Message Now</button>
+        </div>
+    </div>
+    <!-- ================contact us end===== -->
+    <!-- ===========Footer================ -->
+    <footer class="footer">
+        <p>copyright &copy; 2023 scholar organisation.All right reserved .</p>
+        <p>Design : Abhishek kumar</p>
+    </footer>
+    <!-- ==================================== -->
 
     <script src="script.js"></script>
 </body>
+
 </html>
